# xplt

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  update.py  usage.html  versions.json
.doctrees/: api.doctree  codeautolink-cache.json  quickstart.doctree
.doctrees/examples/: colors.doctree  hamiltonians.doctree  line.doctree  phasespace.doctree  properties.doctree  timestructure.doctree  twiss.doctree
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependencies.yaml  docs.yaml  pre-commit.yml  qa.yaml  release.yaml  release_trigger.yaml  test.yaml
0.10/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  usage.html
0.10/.doctrees/: api.doctree  codeautolink-cache.json
0.10/examples/: animations.html  colors.html  concepts.html  hamiltonians.html  line.html  phasespace.html  timestructure.html  twiss.html
0.11/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  usage.html
0.11/.doctrees/: api.doctree  codeautolink-cache.json  index.doctree  quickstart.doctree  usage.doctree
0.11/_static/: documentation_options.js
0.11/examples/: animations.html  colors.html  concepts.html  hamiltonians.html  line.html  phasespace.html  timestructure.html  twiss.html  utilities.html
0.12/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  usage.html
0.8/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  usage.html
0.9/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  usage.html
_sources/: api.rst.txt  quickstart.md.txt
_static/: documentation_options.js
docs/: api.rst  conf.py  index.md  index.rst  quickstart.md  requirements.txt  usage.md  usage.rst
examples/: 000_floor_plot.py  000_plot_thick_horizontal.py  animations.html  animations.ipynb  colors.html  colors.ipynb  concepts.ipynb  hamiltonians.html  hamiltonians.ipynb  line.html  line.ipynb  line_cases.ipynb  line_check_different_configurations.ipynb  phasespace.html  phasespace.ipynb  properties.html  properties.ipynb  requirements.txt  timestructure.html  timestructure.ipynb  twiss.html  twiss.ipynb  units.ipynb  utilities.ipynb
requirements/: docs-requirements.txt  docs.in  examples-requirements-py3.10.txt  examples-requirements-py3.11.txt  examples-requirements-py3.12.txt  examples-requirements-py3.13.txt  examples-requirements-py3.14.txt  examples-requirements-py3.9.txt  examples.in  tests-requirements-py3.10.txt  tests-requirements-py3.11.txt  tests-requirements-py3.12.txt  tests-requirements-py3.13.txt  tests-requirements-py3.14.txt  tests-requirements-py3.9.txt  tests-requirements-var-numpy1.txt  tests.in
tests/: .darglint  requirements-numpy1.txt  requirements.txt  test_examples.py  test_line.py  test_utils.py
xplot/: __init__.py  base.py  colors.py  hooks.py  line.py  matplotlib_setup.py  phasespace.py  twiss.py  util.py
xplt/: __init__.py  base.py  colors.py  hooks.py  line.py  particles.py  phasespace.py  properties.py  timestructure.py  twiss.py  units.py  util.py  xplt.mplstyle
(+270 files in other folders)
