


# Project information

[project]
name = "xplt"
description = "Plotting for Xsuite"
readme = "README.md"
keywords = ["python"]
#license = {text = ""}
authors = [
  { name = "Philipp Niedermayer (github.com/eltos)", email = "eltos@outlook.de" },
]
classifiers = [
    "Development Status :: 4 - Beta",
#    "License :: ",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pint",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/eltos/xplt/"



# Build tools

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "xplt.__version__"}

[tool.setuptools]
packages = ['xplt']


# Dev tools

[tool.black]
line-length = 88
target-version = ['py38']
