


# Project information

[project]
name = "xplt"
description = "Plotting for Xsuite"
readme = "README.md"
keywords = ["python"]
license = {file = "LICENSE"}
authors = [
  { name = "Philipp Niedermayer (github.com/eltos)", email = "eltos@outlook.de" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Matplotlib",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.6",
    "numpy>=1.17.0",
    "scipy>=1.2.0",
    "pint>=0.24.1",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/eltos/xplt"
documentation = "https://xsuite.github.io/xplt"
repository = "https://github.com/xsuite/xplt"

[project.optional-dependencies]
all = ["pandas"]


# Build tools

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "xplt.__version__"}

[tool.setuptools]
packages = ['xplt']


# Dev tools

[tool.black]
line-length = 98
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pylint.main]
load-plugins = "pylint.extensions.docparams"
disable = "all"
enable = ["parameter_documentation"]
[tool.pylint.parameter_documentation]
default-docstring-type = "google"
[tool.pylint.basic]
no-docstring-rgx = "^(?!.*)_" # also check private and magic methods "^(?!__init__$)_"

